--- a/noticias.html
+++ b/noticias.html
@@ -145,7 +145,7 @@
     <div>
   <h2 id="Lazer">Lazer</h2>
   <article>
-    <h3>Circo chega na cidade/h3>
+    <h3>Circo chega na cidade</h3>
       <p>
       Lorem ipsum dolor sit amet, consectetur adipiscing elit.
       Aliquam sodales eleifend leo et rhoncus. Quisque elit justo, consectetur at semper quis, aliquam eu sem.
