--- a/noticias.html
+++ b/noticias.html
@@ -143,7 +143,7 @@
 </div>
 
     <div>
-  <h2 id="Lazer">Lazer</h2>
+  <h2 id="lazer">Lazer</h2>
   <article>
     <h3>Circo chega na cidade</h3>
       <p>
