--- a/noticias.html
+++ b/noticias.html
@@ -101,7 +101,7 @@
     </article>
     </div>
 <div>
-  <h2 id="ciencia">Noticias</h2>
+  <h2 id="ciencia">Ciencia</h2>
   <article>
     <h3>Nova lua descoberta por cientistas brasileiros </h3>
       <p>
