--- a/noticias.html
+++ b/noticias.html
@@ -186,7 +186,7 @@
 
   
     <footer>
-   <p> </p>Desenvolvido por Luanda Duarte - 2024</p>
+    <p>Desenvolvido por Luanda Duarte - 2024</p>
     </footer>
 
 </body>
