--- a/atividade_4/atividade4.html
+++ b/atividade_4/atividade4.html
@@ -1,1 +1,40 @@
+<!DOCTYPE html>
+<html lang="pt-BR">
 
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="shortcut icon" href="/" type="image/x-icon">
+  <title>ATIVIDADE 4</title>
+  <link rel="stylesheet" href="atividade4.css">
+</head>
+
+<body>
+  <div class="div1">
+    <h1>Div 1 - Fundo de cor</h1>
+    <p>Cor do fundo: aquamarine</p>
+    <p>Cor da fonte: darkblue</p>
+    <p>Tamanho da fonte: 18px</p>
+    <p>Cor da borda: #cccccc 5px com curvatura de 16px</p>
+    <p>Formato: quadrado</p>
+  </div>
+
+  <div class="div2">
+    <h1>Div 2 - Fundo de imagem</h1>
+    <p>Cor da fonte: #9b5ee6</p>
+    <p>Tamanho da fonte: 18px</p>
+    <p>Cor da borda: #cccccc 5px com curvatura de 16px</p>
+    <p>Formato: retângulo deitado</p>
+  </div>
+
+  <div class="div3">
+    <h1>Div 3 - Fundo de gradiente</h1>
+    <p>Cores do fundo: deeppink, tomato</p>
+    <p>Cor da fonte: darkmagenta</p>
+    <p>Tamanho da fonte: 18px</p>
+    <p>Borda: #cccccc 5px com curvatura de 16px</p>
+    <p>Formato: retângulo em pé</p>
+  </div>
+</body>
+
+</html>
